@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Optimized queries that use ``IN`` or ``ANY`` on fields of type ``string``
+
  - Fix: Prevent COPY FROM or INSERT into a partitioned table to run into timeouts
    when creating many partitions at once
 
